--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,5 +6,6 @@
         <item name="android:textColor">@color/purple_200</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
+        <item name="android:padding">25sp</item>
     </style>
 </resources>
