--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="title_purple">
+    <style name="Color_title">
         <item name="android:textSize">48sp</item>
         <item name="android:textColor">@color/purple_200</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textAllCaps">true</item>
-        <item name="android:padding">25sp</item>
+
+    </style>
+
+    <style name="Input_style">
+        <item name="android:layout_marginTop">36dp</item>
+        <item name="android:layout_marginHorizontal">64dp</item>
+        <item name="android:inputType">numberDecimal</item>
+        <item name="android:textColor">@android:color/holo_green_dark</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textAlignment">center</item>
     </style>
 </resources>
