--- a/app/src/main/res/layout/main_linear.xml
+++ b/app/src/main/res/layout/main_linear.xml
@@ -1,40 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center">
 
     <TextView
-        android:id="@+id/titleTXT"
-        android:text="@string/IMC"
+        android:id="@+id/textView"
+        style="@style/Color_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Color_title" />
+        android:text="@string/IMC"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/editText3" />
 
     <EditText
-        android:id="@+id/peso"
-        android:layout_width="match_parent"
-        android:hint="@string/hintPeso"
-        android:layout_height="wrap_content"
-        style="@style/Input_style" />
-
-    <EditText
-        android:id="@+id/altura"
+        android:id="@+id/editText2"
         style="@style/Input_style"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="297dp"
+        android:layout_marginEnd="64dp"
+        android:hint="@string/hintPeso"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editText3"
+        style="@style/Input_style"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="1dp"
         android:hint="@string/hintAltura"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <Button
-        android:id="@+id/BtCalcular"
-        android:text="@string/BtCalcular"
-        android:padding="16dp"
-        android:textSize="16sp"
-        android:layout_marginTop="46dp"
+        android:id="@+id/button2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="46dp"
+        android:padding="16dp"
+        android:text="@string/BtCalcular"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
